--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
 
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:Chaithanyac6300@gmail.com">Chaithanyac6300@gmail.com</a></p>
-      <p>Phone/Whatsapp: 6300935819</p>
-      <p>Location: Chittoor, Andhra Pradesh</p>
-      <a href="https://www.linkedin.com/in/j-chaithanya-rise" class="button" target="_blank">LinkedIn</a>
+      <p><strong>Email:</strong> <a href="mailto:chaithanyac6300@gmail.com">chaithanyac6300@gmail.com</a></p>
+    <p><strong>Phone/WhatsApp:</strong> +91 63009 35819</p>
+    <p><strong>Location:</strong> Chittoor, Andhra Pradesh</p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com">linkedin.com/in/chaithanyarise</a></p>
+    <p><strong>GitHub:</strong> <a href="https://github.com/chaithanyarise">github.com/chaithanyarise</a></p>
       <a href="resume.pdf" class="button" view>View Resume</a>
     </section>
   </div>
